tests/server/snapshots/convertor_test__server__profile_test__profile_surge_boslife.snap
---
source: tests/server/profile_test.rs
expression: actual
---
#!MANAGED-CONFIG http://127.0.0.1/profile/surge/boslife?interval=43200&strict=true&sub_url=http://127.0.0.1:8080/subscription?token=bppleman interval=43200 strict=true

[General]
skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, localhost, *.local, seed-sequoia.siri.apple.com, sequoia.apple.com, *.crashlytics.com
loglevel = notify
dns-server = system, 119.29.29.29, 119.28.28.28, 182.254.116.116, 8.8.8.8, 8.8.4.4

// iOS
bypass-system = true
bypass-tun = 192.168.0.0/16, 172.16.0.0/12, 100.64.0.0/10, 10.0.0.0/8, 17.0.0.0/8

// macOS
interface = 0.0.0.0
socks-interface = 0.0.0.0
enhanced-mode-by-rule = true

[Proxy]
订阅提供商信息=ss,bppleman.com,24000,password=bppleman,encrypt-method=aes-128-gcm,udp-relay=true,tfo=true
🇭🇰 香港 01=ss,bppleman.com,24000,password=bppleman,encrypt-method=aes-128-gcm,udp-relay=true,tfo=true
🇭🇰 香港 02=ss,bppleman.com,24001,password=bppleman,encrypt-method=aes-128-gcm,udp-relay=true,tfo=true
🇭🇰 香港 03=ss,bppleman.com,24002,password=bppleman,encrypt-method=aes-128-gcm,udp-relay=true,tfo=true
🇭🇰 香港 04=ss,bppleman.com,24003,password=bppleman,encrypt-method=aes-128-gcm,udp-relay=true,tfo=true
🇭🇰 香港 05 - YouTube免广=ss,bppleman.com,24004,password=bppleman,encrypt-method=aes-128-gcm,udp-relay=true,tfo=true
🏳️‍🌈 台湾 01=ss,bppleman.com,23010,password=bppleman,encrypt-method=chacha20-ietf-poly1305,udp-relay=true,tfo=true
🏳️‍🌈 台湾 02=ss,bppleman.com,23011,password=bppleman,encrypt-method=chacha20-ietf-poly1305,udp-relay=true,tfo=true
🏳️‍🌈 台湾 03=ss,bppleman.com,23012,password=bppleman,encrypt-method=chacha20-ietf-poly1305,udp-relay=true,tfo=true
🏳️‍🌈 台湾 04=ss,bppleman.com,23013,password=bppleman,encrypt-method=chacha20-ietf-poly1305,udp-relay=true,tfo=true
🏳️‍🌈 台湾 05=ss,bppleman.com,23014,password=bppleman,encrypt-method=chacha20-ietf-poly1305,udp-relay=true,tfo=true
🇸🇬 新加坡 01=ss,bppleman.com,23001,password=bppleman,encrypt-method=chacha20-ietf-poly1305,udp-relay=true,tfo=true
🇸🇬 新加坡 02=ss,bppleman.com,23002,password=bppleman,encrypt-method=chacha20-ietf-poly1305,udp-relay=true,tfo=true
🇸🇬 新加坡 03=ss,bppleman.com,23003,password=bppleman,encrypt-method=chacha20-ietf-poly1305,udp-relay=true,tfo=true
🇸🇬 新加坡 04=ss,bppleman.com,23004,password=bppleman,encrypt-method=chacha20-ietf-poly1305,udp-relay=true,tfo=true
🇸🇬 新加坡 05=ss,bppleman.com,23005,password=bppleman,encrypt-method=chacha20-ietf-poly1305,udp-relay=true,tfo=true
🇯🇵 日本 01=ss,bppleman.com,23020,password=bppleman,encrypt-method=chacha20-ietf-poly1305,udp-relay=true,tfo=true
🇯🇵 日本 02=ss,bppleman.com,23021,password=bppleman,encrypt-method=chacha20-ietf-poly1305,udp-relay=true,tfo=true
🇯🇵 日本 03=ss,bppleman.com,23022,password=bppleman,encrypt-method=chacha20-ietf-poly1305,udp-relay=true,tfo=true
🇯🇵 日本 04=ss,bppleman.com,23023,password=bppleman,encrypt-method=chacha20-ietf-poly1305,udp-relay=true,tfo=true
🇯🇵 日本 05=ss,bppleman.com,23024,password=bppleman,encrypt-method=chacha20-ietf-poly1305,udp-relay=true,tfo=true
🇺🇸 美国 01=ss,bppleman.com,24050,password=bppleman,encrypt-method=aes-128-gcm,udp-relay=true,tfo=true
🇺🇸 美国 02=ss,bppleman.com,24051,password=bppleman,encrypt-method=aes-128-gcm,udp-relay=true,tfo=true
🇺🇸 美国 03=ss,bppleman.com,24052,password=bppleman,encrypt-method=aes-128-gcm,udp-relay=true,tfo=true
🇺🇸 美国 04=ss,bppleman.com,24053,password=bppleman,encrypt-method=aes-128-gcm,udp-relay=true,tfo=true
🇺🇸 美国 05=ss,bppleman.com,24054,password=bppleman,encrypt-method=aes-128-gcm,udp-relay=true,tfo=true
🇨🇦 加拿大 01=ss,bppleman.com,24060,password=bppleman,encrypt-method=aes-128-gcm,udp-relay=true,tfo=true
🇰🇷 韩国 01=trojan,bppleman.com,60101,password=bppleman,udp-relay=true,tfo=true,sni=video-caps.wetvinfo.com,skip-cert-verify=true
🇬🇧 英国 01=trojan,bppleman.com,60082,password=bppleman,udp-relay=true,tfo=true,sni=video-caps.wetvinfo.com,skip-cert-verify=true
🇫🇷 法国 01=trojan,bppleman.com,60138,password=bppleman,udp-relay=true,tfo=true,sni=video-caps.wetvinfo.com,skip-cert-verify=true
🇩🇪 德国 01=trojan,bppleman.com,60125,password=bppleman,udp-relay=true,tfo=true,sni=video-caps.wetvinfo.com,skip-cert-verify=true
🇦🇺 澳洲 01=trojan,bppleman.com,60092,password=bppleman,udp-relay=true,tfo=true,sni=video-caps.wetvinfo.com,skip-cert-verify=true

[Proxy Group]
BosLife=select,🇭🇰 香港,🇨🇳🏳️‍🌈 台湾,🇸🇬 新加坡,🇯🇵 日本,🇺🇸 美国,🇨🇦 加拿大,🇰🇷 韩国,🇬🇧 英国,🇫🇷 法国,🇩🇪 德国,🇦🇺 澳洲
Subscription Info=select,订阅提供商信息
🇭🇰 香港=smart,🇭🇰 香港 01,🇭🇰 香港 02,🇭🇰 香港 03,🇭🇰 香港 04,🇭🇰 香港 05 - YouTube免广
🇨🇳🏳️‍🌈 台湾=smart,🏳️‍🌈 台湾 01,🏳️‍🌈 台湾 02,🏳️‍🌈 台湾 03,🏳️‍🌈 台湾 04,🏳️‍🌈 台湾 05
🇸🇬 新加坡=smart,🇸🇬 新加坡 01,🇸🇬 新加坡 02,🇸🇬 新加坡 03,🇸🇬 新加坡 04,🇸🇬 新加坡 05
🇯🇵 日本=smart,🇯🇵 日本 01,🇯🇵 日本 02,🇯🇵 日本 03,🇯🇵 日本 04,🇯🇵 日本 05
🇺🇸 美国=smart,🇺🇸 美国 01,🇺🇸 美国 02,🇺🇸 美国 03,🇺🇸 美国 04,🇺🇸 美国 05
🇨🇦 加拿大=smart,🇨🇦 加拿大 01
🇰🇷 韩国=smart,🇰🇷 韩国 01
🇬🇧 英国=smart,🇬🇧 英国 01
🇫🇷 法国=smart,🇫🇷 法国 01
🇩🇪 德国=smart,🇩🇪 德国 01
🇦🇺 澳洲=smart,🇦🇺 澳洲 01

[Rule]
// [Subscription] by convertor/2.5.2
RULE-SET,http://127.0.0.1/rule-provider/surge/boslife?interval=43200&policy[name]=DIRECT&policy[is_subscription]=true&sub_url=http://127.0.0.1:8080/subscription?token=bppleman,DIRECT
// [BosLife] by convertor/2.5.2
RULE-SET,http://127.0.0.1/rule-provider/surge/boslife?interval=43200&policy[name]=BosLife&policy[is_subscription]=false&sub_url=http://127.0.0.1:8080/subscription?token=bppleman,BosLife
// [BosLife: no-resolve] by convertor/2.5.2
RULE-SET,http://127.0.0.1/rule-provider/surge/boslife?interval=43200&policy[name]=BosLife&policy[option]=no-resolve&policy[is_subscription]=false&sub_url=http://127.0.0.1:8080/subscription?token=bppleman,BosLife,no-resolve
// [BosLife: force-remote-dns] by convertor/2.5.2
RULE-SET,http://127.0.0.1/rule-provider/surge/boslife?interval=43200&policy[name]=BosLife&policy[option]=force-remote-dns&policy[is_subscription]=false&sub_url=http://127.0.0.1:8080/subscription?token=bppleman,BosLife,force-remote-dns
// [DIRECT] by convertor/2.5.2
RULE-SET,http://127.0.0.1/rule-provider/surge/boslife?interval=43200&policy[name]=DIRECT&policy[is_subscription]=false&sub_url=http://127.0.0.1:8080/subscription?token=bppleman,DIRECT
// [DIRECT: no-resolve] by convertor/2.5.2
RULE-SET,http://127.0.0.1/rule-provider/surge/boslife?interval=43200&policy[name]=DIRECT&policy[option]=no-resolve&policy[is_subscription]=false&sub_url=http://127.0.0.1:8080/subscription?token=bppleman,DIRECT,no-resolve
// [DIRECT: force-remote-dns] by convertor/2.5.2
RULE-SET,http://127.0.0.1/rule-provider/surge/boslife?interval=43200&policy[name]=DIRECT&policy[option]=force-remote-dns&policy[is_subscription]=false&sub_url=http://127.0.0.1:8080/subscription?token=bppleman,DIRECT,force-remote-dns

GEOIP,CN,DIRECT
FINAL,DIRECT

[URL Rewrite]
^https?://(www.)?g.cn https://www.google.com.hk 302
^https?://(www.)?google.cn https://www.google.com.hk 302
^https?://youtube.com https://www.youtube.com 302
